Employee Page Connect DB

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -28,5 +28,7 @@
   "wrinkles": "รอยยับ",
   "flaky": "เป็นขุย",
   "broken_zipper": "ซิปแตก",
-  "stain": "เปื้อน"
+  "stain": "เปื้อน",
+  "ADMIN": "ผู้จัดการร้าน",
+  "SUB_ADMIN": "พนักงาน"
 }
