Update Clothe management
-

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -31,5 +31,7 @@
   "broken_zipper": "ซิปแตก",
   "stain": "เปื้อน",
   "ADMIN": "ผู้จัดการร้าน",
-  "SUB_ADMIN": "พนักงาน"
+  "SUB_ADMIN": "พนักงาน",
+  "IN": "อยู่ในระบบ",
+  "OUT": "นำส่งแล้ว"
 }
