Liverpool แชมป์แน่ปีนี้

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -32,7 +32,7 @@
   "stain": "เปื้อน",
   "ADMIN": "ผู้จัดการร้าน",
   "SUB_ADMIN": "พนักงาน",
-  "HEAD_ADMIN": "สุดยอดผู้จัดการร้าน",
+  "HEAD_ADMIN": "เจ้าของร้าน",
   "IN": "อยู่ในระบบ",
   "OUT": "นำส่งแล้ว"
 }
